--- a/src/components/board/row/box/styles.scss
+++ b/src/components/board/row/box/styles.scss
@@ -1,4 +1,26 @@
+$CORRECT: rgb(131, 247, 95);
+$INCORRECT: transparent;
+$EXISTS: rgb(247, 194, 95);
+
 .box {
   background-color: white;
   color: black;
+
+  &--correct {
+    @extend .box;
+
+    background-color: $CORRECT;
+  }
+
+  &--incorrect {
+    @extend .box;
+
+    background-color: $INCORRECT;
+  }
+
+  &--exists {
+    @extend .box;
+
+    background-color: $EXISTS;
+  }
 }
