--- a/src/components/board/row/box/styles.scss
+++ b/src/components/board/row/box/styles.scss
@@ -3,8 +3,15 @@ $INCORRECT: transparent;
 $EXISTS: rgb(247, 194, 95);
 
 .box {
-  background-color: white;
-  color: black;
+  color: white;
+  display: inline-block;
+  margin: 5px;
+  font-size: 4rem;
+  font-weight: 700;
+  font-family: "Rubik", sans-serif;
+  width: 80px;
+  height: 80px;
+  text-align: center;
 
   &--correct {
     @extend .box;
