--- a/src/components/board/row/styles.scss
+++ b/src/components/board/row/styles.scss
@@ -1,5 +1,5 @@
 .row {
-  border: 2px solid blue;
+  height: 90px;
   position: relative;
 }
 
@@ -8,8 +8,8 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  border: 2px solid green;
   outline: none;
+  color: transparent;
   caret-color: transparent;
   background-color: transparent;
 }
