--- a/src/components/board/row/box/styles.scss
+++ b/src/components/board/row/box/styles.scss
@@ -11,6 +11,7 @@ $EXISTS: rgb(247, 194, 95);
   width: 80px;
   height: 80px;
   text-align: center;
+  border: 3px solid white;
 
   &--correct {
     @extend .box;
