--- a/src/components/board/styles.scss
+++ b/src/components/board/styles.scss
@@ -1,6 +1,5 @@
 .board {
-  margin: auto;
+  margin: 20px auto;
   width: 100%;
-  max-width: 600px;
-  border: 2px solid red;
+  max-width: 500px;
 }
