💄 Added basic keyboard.

--- a/src/components/board/row/box/styles.scss
+++ b/src/components/board/row/box/styles.scss
@@ -1,6 +1,4 @@
-$CORRECT: rgb(131, 247, 95);
-$INCORRECT: transparent;
-$EXISTS: rgb(247, 194, 95);
+@import "../../../styleConstants.scss";
 
 .box {
   color: white;
