--- a/src/components/board/row/box/styles.scss
+++ b/src/components/board/row/box/styles.scss
@@ -11,6 +11,12 @@
   text-align: center;
   border: 3px solid white;
 
+  @media(max-width : 800px) {
+    width: 150px;
+    height: 150px;
+    font-size: 6rem;
+  }
+
   &--correct {
     @extend .box;
 
