--- a/src/components/board/row/styles.scss
+++ b/src/components/board/row/styles.scss
@@ -3,6 +3,10 @@
   position: relative;
   display: flex;
   justify-content: space-between;
+
+  @media(max-width : 800px) {
+    height: 170px;
+  }
 }
 
 .row input {
