--- a/src/components/body/styles.scss
+++ b/src/components/body/styles.scss
@@ -1,13 +1,21 @@
 .body {
   text-align: center;
 
-  > button {
+  >button {
     margin: auto;
     font-family: "Rubik", sans-serif;
     font-weight: 700;
     font-size: 2rem;
     border: 3px solid white;
     border-radius: 5px;
+
+    @media(max-width : 800px) {
+      margin: 25px;
+      font-size: 90px;
+      padding: 15px;
+      border-width: 10px;
+      margin-bottom: 500px;
+    }
 
     &:hover {
       cursor: pointer;
