--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,7 +1,12 @@
-.header > h1 {
+.header>h1 {
   font-family: "Rubik", sans-serif;
   font-weight: 700;
   margin: auto;
   text-align: center;
   border-bottom: 2px solid rgb(97, 97, 97);
+
+  @media(max-width : 800px) {
+    font-weight: 700;
+    font-size: 100px;
+  }
 }
