--- a/src/components/keyboard/styles.scss
+++ b/src/components/keyboard/styles.scss
@@ -15,6 +15,14 @@
   margin: 5px;
   white-space: nowrap;
 
+  @media(max-width : 800px) {
+    border-radius: 8px;
+    font-size: 80px;
+    font-weight: 700;
+    padding: 10px;
+    margin: 7px;
+  }
+
   &--correct {
     @extend .keyboard-key;
     background-color: $CORRECT;
