--- a/src/components/board/styles.scss
+++ b/src/components/board/styles.scss
@@ -3,7 +3,8 @@
   width: 100%;
   max-width: 500px;
 
-  @media(max-width : 800px) {
-    max-width: 800px;
+  @media(max-width : 450px) {
+    max-width: 600px;
+    margin: auto;
   }
 }
