--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -5,8 +5,8 @@
   text-align: center;
   border-bottom: 2px solid rgb(97, 97, 97);
 
-  @media(max-width : 800px) {
+  @media(max-width : 450px) {
     font-weight: 700;
-    font-size: 100px;
+    font-size: 4rem;
   }
 }
