--- a/src/components/keyboard/styles.scss
+++ b/src/components/keyboard/styles.scss
@@ -15,12 +15,12 @@
   margin: 5px;
   white-space: nowrap;
 
-  @media(max-width : 800px) {
+  @media(max-width : 450px) {
     border-radius: 8px;
-    font-size: 80px;
+    font-size: 2rem;
     font-weight: 700;
-    padding: 10px;
-    margin: 7px;
+    padding: 5px;
+    margin: 2px;
   }
 
   &--correct {
